--- a/MDK-ARM/.vscode/settings.json
+++ b/MDK-ARM/.vscode/settings.json
@@ -7,6 +7,7 @@
         "lcd.h": "c",
         "as5600.h": "c",
         "lvgl.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "lcd_init_dma.h": "c"
     }
 }
