--- a/MDK-ARM/STM32_Sensorless_BLDC.uvprojx
+++ b/MDK-ARM/STM32_Sensorless_BLDC.uvprojx
@@ -1753,6 +1753,16 @@
               <FileType>5</FileType>
               <FilePath>..\Bsp\inc\foc_drv.h</FilePath>
             </File>
+            <File>
+              <FileName>pid.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Bsp\pid.c</FilePath>
+            </File>
+            <File>
+              <FileName>pid.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Bsp\inc\pid.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
