将磁编码器的读取写入任务-解决阻塞的问题

--- a/MDK-ARM/STM32_Sensorless_BLDC.uvprojx
+++ b/MDK-ARM/STM32_Sensorless_BLDC.uvprojx
@@ -1873,6 +1873,16 @@
               <FileType>5</FileType>
               <FilePath>..\App\inc\uart_task.h</FilePath>
             </File>
+            <File>
+              <FileName>foc_task.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\App\foc_task.c</FilePath>
+            </File>
+            <File>
+              <FileName>foc_task.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\App\inc\foc_task.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
